--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -33,4 +33,16 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+.signIn {
+  /* Add or modify styles for the Sign In button */
+  position: absolute;
+  top: 20%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+  font-size: 26px;
+  background-color: rgb(0, 0, 0) (1, 1, 18);
+  color: rgb(93, 7, 7);
+  cursor: pointer;
+}
 
