--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,6 +1,23 @@
 .App {
   text-align: center;
 }
+body {
+  background-color: pink;
+  color: hotpink; /* Text color hot pink */
+  font-weight: bold;
+  font-size: xx-large; /* Make text bold */
+}
+
+/* If you want to make specific elements bold */
+.button {
+  font-weight: bold;
+}
+
+/* If you want to make the text inside a specific element bold */
+.myElement {
+  font-weight: bold;
+  font-size: x-large;
+}
 
 .App-logo {
   height: 40vmin;
@@ -35,11 +52,11 @@
 }
 .signIn {
   /* Add or modify styles for the Sign In button */
-  position: absolute;
-  top: 20%;
+  position: fixed;
+  top: 80%;
   left: 80%;
   transform: translate(-50%, -50%);
-  padding: 30px;
+  padding: 90px;
   font-size: 26px;
   background-color: rgb(0, 0, 0) (1, 1, 18);
   color: rgb(93, 7, 7);
