making things pink #BarbieEra

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -3,7 +3,7 @@
 }
 body {
   background-color: pink;
-  color: hotpink; /* Text color hot pink */
+  color: blue; /* Text color hot pink */
   font-weight: bold;
   font-size: xx-large; /* Make text bold */
 }
